--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "morgan": "~1.9.1",
+    "multer": "^2.0.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.1",
     "qrcode": "^1.5.3"
   }
